# Projeto-Sistema-de-cadastro-escolar05

./: Aluno.hpp  CadastroEscolar.cpp  LICENSE  ParteMurilo.cpp  README.md  RelatorioGeral.cpp  cadastrarAluno.hpp  cadastro_escolar  filtrarPorFalta.hpp  filtrarPorMedia.hpp  main.cpp
projeto/: CMakeLists.txt
projeto/header/: Aluno.h  DesfazerCadastro.h  ListaAluno.h  buscaAluno.h  cadastroAluno.h  filtrarPorFalta.h  filtrarPorMedia.h  relatorioFaltas.h  relatorioGeral.h
projeto/main/: main.cpp
